modify git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/
+mvnw
+mvnw.cmd
+pom.xml
+.DS_Store
+.metadata/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
