updated angular.json to allow ng build, fixed qapprovedby on auto-approved feature

--- a/angular/angular.json
+++ b/angular/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/user-management-app",
+            "outputPath": "dist/cogent-capstone-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -34,13 +34,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "6kb",
+                  "maximumError": "6kb"
                 }
               ],
               "outputHashing": "all"
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "user-management-app:build:production"
+              "browserTarget": "cogent-capstone-app:build:production"
             },
             "development": {
-              "browserTarget": "user-management-app:build:development"
+              "browserTarget": "cogent-capstone-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "user-management-app:build"
+            "browserTarget": "cogent-capstone-app:build"
           }
         },
         "test": {
