--- a/angular/angular.json
+++ b/angular/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cogent-capstone-app",
+            "outputPath": "dist/user-management-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "cogent-capstone-app:build:production"
+              "browserTarget": "user-management-app:build:production"
             },
             "development": {
-              "browserTarget": "cogent-capstone-app:build:development"
+              "browserTarget": "user-management-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "cogent-capstone-app:build"
+            "browserTarget": "user-management-app:build"
           }
         },
         "test": {
